--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "movies",
+  "homepage": "https://rupesh8851.github.io/MoviesApp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,7 +9,8 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "mdbreact": "^5.0.2",
+    "gh-pages": "^3.2.3",
+    "mdbreact": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-player": "^2.9.0",
@@ -19,6 +21,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
